scroll stuck solved

--- a/css/bannerly-prototype-a.webflow.css
+++ b/css/bannerly-prototype-a.webflow.css
@@ -1026,7 +1026,9 @@ a.a-button.as-list {
     padding-top: 132px;
     padding-bottom: 30vh;
     max-width: 100vw;
-    overflow-x: hidden;
+    /* overflow-x: hidden;
+    overflow-y: scroll;
+    max-height: 100vh; */
 }
 
 .w-form {
